--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -20,6 +24,8 @@
                 <li class="list-item"><a href="" class="link">Portfolio</a></li>
                 <li class="list-item"><a href="" class="link">Contact</a></li>
             </ul>
+
+            <i class="fa-solid fa-bars"></i>
         </nav>
 
         <div class="hero">
